--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,7 +1,7 @@
 on:
   # Trigger analysis when pushing in master or pull requests, and when creating
   # a pull request. 
-  workflow_run:
+  workflow_dispatch:
   push:
     branches:
       - main
