--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - vp-rem
   pull_request:
       types: [opened, synchronize, reopened]
 name: Main Workflow
